@@ -16,7 +16,8 @@ TrojanServ Module for NeoStats Changelog.
  - SecureServ supports the new API version interface, and __ModInit, __ModFini function calls of NeoStats
  - When a user joins a channel, user exemptions are checked as well as channel exemptions.
  - Helper interface added, and SVSJOIN code now works!
- 
+ - send a update when we get a positive to secure.irc-chat.net if we have a account 
+
 0.9.2 - Fish - 03 June, 2003
  - Fixed the hash_insert problem that was crashing NeoStats. Was happening with NickChanges
  - Fixed a type on the set verbose on message. 
